--- a/requirements.txt
+++ b/requirements.txt
@@ -1,169 +1,169 @@
 aiobotocore
 aiofiles
-aiohappyeyeballs==2.3.5
-aiohttp==3.10.3
+aiohttp
+aiohappyeyeballs
 aioitertools
 aiosignal
 aiosqlite
-alabaster==1.0.0
-alembic==1.13.2
-altair==5.3.0
-annotated-types==0.7.0
+alabaster
+alembic
+altair
+annotated-types
 anyio
-appdirs==1.4.4
+appdirs
 argon2-cffi
 argon2-cffi-bindings
 arrow
-asgiref==3.8.1
+asgiref
 astroid
 astropy
 asttokens
 async-timeout
-atomicwrites==1.4.0
-attrs==24.2.0
+atomicwrites
+attrs
 Automat
 autopep8
-babel==2.16.0
+babel
 backcall
-backoff==2.2.1
+backoff
 backports.functools-lru-cache
 backports.tempfile
-backports.weakref==1.0.post1
-bcrypt==4.2.0
-beautifulsoup4==4.12.3
+backports.weakref
+bcrypt
+beautifulsoup4
 binaryornot
 black
 bleach
-blinker==1.8.2
+blinker
 bokeh
 boltons
 boto3
 botocore
-Bottleneck==1.4.2
-branca==0.8.1
-brotlipy==0.7.0
-build==1.2.1
-cachetools==5.4.0
+Bottleneck
+branca
+brotlipy
+build
+cachetools
 catboost
-certifi==2024.2.2
+certifi
 cffi
-chardet==5.2.0
-charset-normalizer==3.3.2
-chroma-hnswlib==0.7.6
-chromadb==0.5.5
-click==8.1.7
+chardet
+charset-normalizer
+chroma-hnswlib
+chromadb
+click
 cloudpickle
-# clyent==1.2.1
+clyent
 colorama
 colorcet
-coloredlogs==15.0.1
-colorlog==6.8.2
+coloredlogs
+colorlog
 comm
-common==0.1.2
+common
 conda
 conda-build
 conda-content-trust
 conda-libmamba-solver
 conda-pack
 conda-package-handling
-conda-repo-cli==1.0.41
+conda-repo-cli
 conda-token
-conda-verify==3.4.2
+conda-verify
 conda_index
 conda_package_streaming
-constantly==15.1.0
+constantly
 contourpy
 cookiecutter
 cryptography
-cssselect==1.1.0
+cssselect
 cycler
 cytoolz
-daal4py==2023.1.1
-dacite==1.8.1
+daal4py
+dacite
 dask
-dataclasses-json==0.6.4
-dataclasses-json-speakeasy==0.5.11
+dataclasses-json
+dataclasses-json-speakeasy
 datashader
-datashape==0.5.4
+datashape
 debugpy
 decorator
 defusedxml
-Deprecated==1.2.14
+Deprecated
 diff-match-patch
 dill
 distributed
-distro==1.9.0
+distro
 docstring-to-markdown
-docutils==0.21.2
-emoji==2.10.1
+docutils
+emoji
 entrypoints
-et-xmlfile==1.1.0
+et-xmlfile
 executing
-faiss-cpu==1.8.0
-Faker==37.0.2
-fastapi==0.112.0
+faiss-cpu
+Faker
+fastapi
 fastjsonschema
-favicon==0.7.0
+favicon
 filelock
-filetype==1.2.0
+filetype
 flake8
-Flask==2.3.3
-flatbuffers==24.3.25
-folium==0.19.3
-fonttools==4.25.0
+Flask
+flatbuffers
+folium
+fonttools
 frozenlist
-fsspec==2024.6.1
+fsspec
 future
 gensim
-geopandas==1.0.1
-gitdb==4.0.11
-GitPython==3.1.43
+geopandas
+gitdb
+GitPython
 glob2
-google-ai-generativelanguage==0.6.6
-google-api-core==2.19.1
-google-api-python-client==2.141.0
-google-auth==2.33.0
-google-auth-httplib2==0.2.0
-google-cloud-aiplatform==1.43.0
-google-cloud-bigquery==3.25.0
-google-cloud-core==2.4.1
-google-cloud-language==2.14.0
-google-cloud-resource-manager==1.12.5
-google-cloud-storage==2.18.2
-google-crc32c==1.5.0
-google-generativeai==0.7.2
-google-resumable-media==2.7.2
-googleapis-common-protos==1.63.2
-graphviz==0.20.3
+google-ai-generativelanguage
+google-api-core
+google-api-python-client
+google-auth
+google-auth-httplib2
+google-cloud-aiplatform
+google-cloud-bigquery
+google-cloud-core
+google-cloud-language
+google-cloud-resource-manager
+google-cloud-storage
+google-crc32c
+google-generativeai
+google-resumable-media
+googleapis-common-protos
+graphviz
 greenlet
-grpc-google-iam-v1==0.13.1
-grpcio==1.65.4
-grpcio-status==1.62.3
-h11==0.14.0
+grpc-google-iam-v1
+grpcio
+grpcio-status
+h11
 h5py
 HeapDict
 holoviews
-htbuilder==0.9.0
-htmlmin==0.1.12
-httpcore==1.0.5
-httplib2==0.22.0
-httptools==0.6.1
-httpx==0.27.0
-huggingface-hub==0.24.5
-humanfriendly==10.0
+htbuilder
+htmlmin
+httpcore
+httplib2
+httptools
+httpx
+huggingface-hub
+humanfriendly
 hvplot
 hyperlink
-idna==3.6
+idna
 imagecodecs
-ImageHash==4.3.1
+ImageHash
 imageio
 imagesize
-imbalanced-learn==0.13.0
-import-ipynb==0.1.4
+imbalanced-learn
+import-ipynb
 importlib-metadata
-importlib_resources==6.4.2
+importlib_resources
 incremental
-inflection==0.5.1
+inflection
 iniconfig
 intake
 intervaltree
@@ -174,19 +174,19 @@ ipywidgets
 isort
 itemadapter
 itemloaders
-itsdangerous==2.2.0
+itsdangerous
 jaraco.classes
 jedi
 jellyfish
 Jinja2
 jinja2-time
-jiter==0.5.0
+jiter
 jmespath
-joblib==1.3.2
+joblib
 json5
-jsonpatch==1.33
-jsonpath-python==1.0.6
-jsonpointer==2.1
+jsonpatch
+jsonpath-python
+jsonpointer
 jsonschema
 jupyter
 jupyter-console
@@ -203,56 +203,56 @@ jupyterlab-widgets
 jupyterlab_server
 keyring
 kiwisolver
-kubernetes==30.1.0
-langchain==0.1.9
-langchain-community==0.0.38
-langchain-core==0.2.32
-langchain-google-genai==1.0.8
-langchain-google-vertexai==0.1.0
-langchain-openai==0.1.21
-langchain-text-splitters==0.2.2
-langdetect==1.0.9
-langsmith==0.1.99
+kubernetes
+langchain
+langchain-community
+langchain-core
+langchain-google-genai
+langchain-google-vertexai
+langchain-openai
+langchain-text-splitters
+langdetect
+langsmith
 lazy-object-proxy
 lazy_loader
-lazypredict==0.2.13
+lazypredict
 libarchive-c
 libmambapy
-lightgbm==4.3.0
+lightgbm
 linkify-it-py
-llvmlite==0.43.0
+llvmlite
 lmdb
 locket
-lxml==5.1.0
+lxml
 lz4
-Mako==1.3.5
-Markdown==3.7
+Mako
+Markdown
 markdown-it-py
-markdownlit==0.0.7
+markdownlit
 MarkupSafe
-marshmallow==3.20.2
-matplotlib==3.7.2
+marshmallow
+matplotlib
 matplotlib-inline
 mccabe
 mdit-py-plugins
 mdurl
 menuinst
-missingno==0.5.2
+missingno
 mistune
-mkl-fft==1.3.6
+mkl-fft
 mkl-random
-mkl-service==2.4.0
-mmh3==4.1.0
-monotonic==1.6
+mkl-service
+mmh3
+monotonic
 more-itertools
 mpmath
 msgpack
 multidict
-multimethod==1.12
+multimethod
 multipledispatch
-munkres==1.1.4
-mypy-extensions==1.0.0
-navigator-updater==0.4.0
+munkres
+mypy-extensions
+navigator-updater
 nbclassic
 nbclient
 nbconvert
@@ -262,31 +262,31 @@ networkx
 nltk
 notebook
 notebook_shim
-numba==0.60.0
+numba
 numexpr
-numpy==1.26.4
+numpy
 numpydoc
-oauthlib==3.2.2
-onnxruntime==1.18.1
-openai==0.28.0
-openpyxl==3.1.5
-opentelemetry-api==1.26.0
-opentelemetry-exporter-otlp-proto-common==1.26.0
-opentelemetry-exporter-otlp-proto-grpc==1.26.0
-opentelemetry-instrumentation==0.47b0
-opentelemetry-instrumentation-asgi==0.47b0
-opentelemetry-instrumentation-fastapi==0.47b0
-opentelemetry-proto==1.26.0
-opentelemetry-sdk==1.26.0
-opentelemetry-semantic-conventions==0.47b0
-opentelemetry-util-http==0.47b0
-optuna==3.6.0
-orjson==3.10.7
-outcome==1.3.0.post0
-overrides==7.7.0
-packaging==23.2
-pandas==2.2.3
-pandas-profiling==3.2.0
+oauthlib
+onnxruntime
+openai
+openpyxl
+opentelemetry-api
+opentelemetry-exporter-otlp-proto-common
+opentelemetry-exporter-otlp-proto-grpc
+opentelemetry-instrumentation
+opentelemetry-instrumentation-asgi
+opentelemetry-instrumentation-fastapi
+opentelemetry-proto
+opentelemetry-sdk
+opentelemetry-semantic-conventions
+opentelemetry-util-http
+optuna
+orjson
+outcome
+overrides
+packaging
+pandas
+pandas-profiling
 pandocfilters
 panel
 param
@@ -296,81 +296,81 @@ parso
 partd
 pathlib
 pathspec
-patsy==0.5.3
-pep8==1.7.1
+patsy
+pep8
 pexpect
-phik==0.12.4
+phik
 pickleshare
-Pillow==9.4.0
+Pillow
 pkginfo
 platformdirs
 plotly
 pluggy
-ply==3.11
+ply
 pooch
-posthog==3.5.0
+posthog
 poyo
 prometheus-client
 prompt-toolkit
 Protego
-proto-plus==1.24.0
-protobuf==4.25.4
+proto-plus
+protobuf
 psutil
 ptyprocess
 pure-eval
 py-cpuinfo
-pyarrow==11.0.0
+pyarrow
 pyasn1
-pyasn1-modules==0.2.8
+pyasn1-modules
 pycodestyle
 pycosat
 pycparser
 pyct
-pycurl==7.45.2
-pydantic==2.8.2
-pydantic_core==2.20.1
-pydeck==0.9.1
-PyDispatcher==2.0.5
+pycurl
+pydantic
+pydantic_core
+pydeck
+PyDispatcher
 pydocstyle
 pyerfa
 pyflakes
-Pygments==2.18.0
+Pygments
 PyJWT
 pylint
 pylint-venv
-pyls-spyder==0.4.0
-pymdown-extensions==10.14.3
+pyls-spyder
+pymdown-extensions
 PyNaCl
 pyodbc
-pyogrio==0.9.0
+pyogrio
 pyOpenSSL
 pyparsing
-PyPDF2==3.0.1
-PyPika==0.48.9
-pyproj==3.6.1
-pyproject_hooks==1.1.0
-PyQt5==5.15.7
+PyPDF2
+PyPika
+pyproj
+pyproject_hooks
+PyQt5
 PyQt5-sip
-PyQtWebEngine==5.15.4
-pyreadline3==3.4.1
+PyQtWebEngine
+pyreadline3
 pyrsistent
 PySocks
 pytest
 python-dateutil
-python-dotenv==0.21.0
-python-iso639==2024.2.7
+python-dotenv
+python-iso639
 python-json-logger
 python-lsp-black
-python-lsp-jsonrpc==1.0.0
+python-lsp-jsonrpc
 python-lsp-server
-python-magic==0.4.27
+python-magic
 python-slugify
 python-snappy
 pytoolconfig
 pytz
 pyviz-comms
 PyWavelets
-pywin32==305.1
+pywin32
 pywin32-ctypes
 pywinpty
 PyYAML
@@ -380,18 +380,18 @@ qstylizer
 QtAwesome
 qtconsole
 QtPy
-queuelib==1.5.0
-rapidfuzz==3.6.1
-regex==2023.12.25
+queuelib
+rapidfuzz
+regex
 requests
 requests-file
-requests-oauthlib==1.3.1
+requests-oauthlib
 requests-toolbelt
 rfc3339-validator
 rfc3986-validator
-rich==13.7.1
+rich
 rope
-rsa==4.9
+rsa
 Rtree
 ruamel-yaml-conda
 ruamel.yaml
@@ -399,130 +399,128 @@ s3fs
 s3transfer
 sacremoses
 scikit-image
-scikit-learn==1.6.1
-scikit-learn-intelex==20230426.121932
-scipy==1.10.1
+scikit-learn
+scikit-learn-intelex
+scipy
 Scrapy
-seaborn==0.13.2
-selenium==4.24.0
+seaborn
+selenium
 Send2Trash
 service-identity
-shap==0.45.0
-shapely==2.0.5
-shellingham==1.5.4
+shap
+shapely
+shellingham
 sip
 six
-sklearn-compat==0.1.3
-slicer==0.0.7
+sklearn-compat
+slicer
 smart-open
-smmap==5.0.1
-sniffio==1.3.1
+smmap
+sniffio
 snowballstemmer
 sortedcontainers
-soupsieve==2.5
-Sphinx==8.0.2
+soupsieve
+Sphinx
 sphinxcontrib-applehelp
 sphinxcontrib-devhelp
 sphinxcontrib-htmlhelp
 sphinxcontrib-jsmath
 sphinxcontrib-qthelp
-sphinxcontrib-serializinghtml==2.0.0
+sphinxcontrib-serializinghtml
 spyder
 spyder-kernels
 SQLAlchemy
-st-annotated-text==4.0.2
-st-theme==1.2.3
+st-annotated-text
+st-theme
 stack-data
-starlette==0.37.2
+starlette
 statsmodels
-streamlit==1.43.2
-streamlit-avatar==0.1.3
-streamlit-camera-input-live==0.2.0
-streamlit-card==1.0.2
-streamlit-embedcode==0.1.2
-streamlit-extras==0.6.0
-streamlit-faker==0.0.3
-streamlit-image-coordinates==0.1.9
-streamlit-keyup==0.3.0
-streamlit-pandas-profiling==0.1.3
-streamlit-toggle-switch==1.0.2
-streamlit-vertical-slider==2.5.5
-streamlit_folium==0.24.0
+streamlit
+streamlit-avatar
+streamlit-camera-input-live
+streamlit-card
+streamlit-embedcode
+streamlit-extras
+streamlit-faker
+streamlit-image-coordinates
+streamlit-keyup
+streamlit-pandas-profiling
+streamlit-toggle-switch
+streamlit-vertical-slider
+streamlit_folium
 sympy
 tables
-tabulate==0.9.0
-tangled-up-in-unicode==0.2.0
-TBB==0.2
+tabulate
+tangled-up-in-unicode
+TBB
 tblib
-tenacity==8.5.0
+tenacity
 terminado
 text-unidecode
 textdistance
-threadpoolctl==3.5.0
+threadpoolctl
 three-merge
 tifffile
-tiktoken==0.7.0
+tiktoken
 tinycss2
 tldextract
-tokenizers==0.20.0
+tokenizers
 toml
 tomlkit
 toolz
 tornado
-tqdm==4.66.2
+tqdm
 traitlets
 transformers
-trio==0.26.2
-trio-websocket==0.11.1
-tweepy==4.14.0
+trio
+trio-websocket
+tweepy
 Twisted
 twisted-iocpsupport
-typeguard==4.4.1
-typer==0.12.3
-types-protobuf==4.25.0.20240417
-types-requests==2.31.0.6
-types-urllib3==1.26.25.14
-typing-inspect==0.9.0
-typing_extensions==4.12.2
-tzdata==2024.1
-tzlocal==5.2
+typeguard
+typer
+types-protobuf
+types-requests
+types-urllib3
+typing-inspect
+typing_extensions
+tzdata
+tzlocal
 uc-micro-py
 ujson
 Unidecode
-unstructured==0.12.6
-unstructured-client==0.18.0
-uritemplate==4.1.1
-urllib3==1.26.18
-uvicorn==0.30.6
-validators==0.33.0
-visions==0.7.6
+unstructured
+unstructured-client
+uritemplate
+urllib3
+uvicorn
+validators
+visions
 w3lib
 watchdog
-watchfiles==0.23.0
+watchfiles
 wcwidth
-webdriver-manager==4.0.2
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==12.0
-Werkzeug==3.0.4
+webdriver-manager
+webencodings
+websocket-client
+websockets
+Werkzeug
 whatthepatch
 widgetsnbextension
 win-inet-pton
-wordcloud==1.9.4
-wrapt==1.16.0
-wsproto==1.2.0
+wordcloud
+wrapt
+wsproto
 xarray
-xgboost==2.1.4
+xgboost
 xlwings
 xyzservices
 y-py
 yapf
 yarl
-ydata-profiling==4.12.0
+ydata-profiling
 ypy-websocket
 zict
 zipp
 zope.interface
-zstandard==0.19.0
-
-
+zstandard
