--- a/requirements.txt
+++ b/requirements.txt
@@ -60,17 +60,17 @@ coloredlogs
 # colorlog
 # comm
 # common
-conda
-conda-build
-conda-content-trust
-conda-libmamba-solver
-conda-pack
-conda-package-handling
-conda-repo-cli
-conda-token
-conda-verify
-conda_index
-conda_package_streaming
+# conda
+# conda-build
+# conda-content-trust
+# conda-libmamba-solver
+# conda-pack
+# conda-package-handling
+# conda-repo-cli
+# conda-token
+# conda-verify
+# conda_index
+# conda_package_streaming
 constantly
 contourpy
 cookiecutter
