--- a/requirements.txt
+++ b/requirements.txt
@@ -1,511 +1,9 @@
-aiobotocore
-aiofiles
-aiohttp
-aiohappyeyeballs
-aioitertools
-aiosignal
-aiosqlite
-alabaster
-alembic
-altair
-annotated-types
-anyio
-appdirs
-argon2-cffi
-argon2-cffi-bindings
-arrow
-asgiref
-astroid
-astropy
-asttokens
-async-timeout
-atomicwrites
-attrs
-Automat
-autopep8
-babel
-backcall
-backoff
-backports.functools-lru-cache
-backports.tempfile
-backports.weakref
-bcrypt
-beautifulsoup4
-binaryornot
-black
-bleach
-blinker
-bokeh
-boltons
-boto3
-botocore
-Bottleneck
-branca
-brotlipy
-build
-cachetools
-catboost
-certifi
-cffi
-chardet
-charset-normalizer
-chroma-hnswlib
-chromadb
-click
-cloudpickle
-# clyent
-colorama
-colorcet
-coloredlogs
-constantly
-contourpy
-cookiecutter
-cryptography
-cssselect
-cycler
-cytoolz
-daal4py
-dacite
-dask
-dataclasses-json
-dataclasses-json-speakeasy
-datashader
-debugpy
-decorator
-defusedxml
-Deprecated
-diff-match-patch
-dill
-distributed
-distro
-docstring-to-markdown
-docutils
-emoji
-entrypoints
-et-xmlfile
-executing
-faiss-cpu
-Faker
-fastapi
-fastjsonschema
-favicon
-filelock
-filetype
-flake8
-Flask
-flatbuffers
-folium
-fonttools
-frozenlist
-fsspec
-future
-gensim
-geopandas
-gitdb
-GitPython
-glob2
-google-ai-generativelanguage
-google-api-core
-google-api-python-client
-google-auth
-google-auth-httplib2
-google-cloud-aiplatform
-google-cloud-bigquery
-google-cloud-core
-google-cloud-language
-google-cloud-resource-manager
-google-cloud-storage
-google-crc32c
-google-generativeai
-google-resumable-media
-googleapis-common-protos
-graphviz
-greenlet
-grpc-google-iam-v1
-grpcio
-grpcio-status
-h11
-h5py
-HeapDict
-holoviews
-htbuilder
-# htmlmin
-httpcore
-httplib2
-httptools
-httpx
-huggingface-hub
-humanfriendly
-hvplot
-hyperlink
-idna
-imagecodecs
-ImageHash
-imageio
-imagesize
-imbalanced-learn
-import-ipynb
-importlib-metadata
-importlib_resources
-incremental
-inflection
-iniconfig
-intake
-intervaltree
-ipykernel
-ipython
-ipython-genutils
-ipywidgets
-isort
-itemadapter
-itemloaders
-itsdangerous
-jaraco.classes
-jedi
-jellyfish
-Jinja2
-jinja2-time
-jiter
-jmespath
-joblib
-json5
-jsonpatch
-jsonpath-python
-jsonpointer
-jsonschema
-jupyter
-jupyter-console
-jupyter-events
-jupyter-server
-jupyter-ydoc
-jupyter_client
-jupyter_core
-jupyter_server_fileid
-jupyter_server_ydoc
-jupyterlab
-jupyterlab-pygments
-jupyterlab-widgets
-jupyterlab_server
-keyring
-kiwisolver
-kubernetes
-langchain
-langchain-community
-langchain-core
-langchain-google-genai
-langchain-google-vertexai
-langchain-openai
-langchain-text-splitters
-langdetect
-langsmith
-lazy-object-proxy
-lazy_loader
-lazypredict
-# libarchive-c
-# libmambapy
-lightgbm
-linkify-it-py
-llvmlite
-lmdb
-locket
-lxml
-lz4
-Mako
-Markdown
-markdown-it-py
-markdownlit
-MarkupSafe
-marshmallow
-matplotlib
-matplotlib-inline
-mccabe
-mdit-py-plugins
-mdurl
-# menuinst
-missingno
-mistune
-# mkl-fft
-# mkl-random
-# mkl-service
-mmh3
-monotonic
-more-itertools
-mpmath
-msgpack
-multidict
-multimethod
-multipledispatch
-munkres
-mypy-extensions
-# navigator-updater
-nbclassic
-nbclient
-nbconvert
-nbformat
-nest-asyncio
-networkx
-nltk
-notebook
-notebook_shim
-numba
-numexpr
-numpy
-numpydoc
-oauthlib
-onnxruntime
-openai
-openpyxl
-opentelemetry-api
-opentelemetry-exporter-otlp-proto-common
-opentelemetry-exporter-otlp-proto-grpc
-opentelemetry-instrumentation
-opentelemetry-instrumentation-asgi
-opentelemetry-instrumentation-fastapi
-opentelemetry-proto
-opentelemetry-sdk
-opentelemetry-semantic-conventions
-opentelemetry-util-http
-optuna
-orjson
-outcome
-overrides
-packaging
-pandas
-pandas-profiling
-pandocfilters
-panel
-param
-paramiko
-parsel
-parso
-partd
-pathlib
-pathspec
-patsy
-pep8
-pexpect
-phik
-pickleshare
-Pillow
-pkginfo
-platformdirs
-plotly
-pluggy
-ply
-pooch
-posthog
-poyo
-prometheus-client
-prompt-toolkit
-Protego
-proto-plus
-protobuf
-psutil
-ptyprocess
-pure-eval
-py-cpuinfo
-pyarrow
-pyasn1
-pyasn1-modules
-pycodestyle
-pycosat
-pycparser
-pyct
-pycurl
-pydantic
-pydantic_core
-pydeck
-PyDispatcher
-pydocstyle
-pyerfa
-pyflakes
-Pygments
-PyJWT
-pylint
-pylint-venv
-pyls-spyder
-pymdown-extensions
-PyNaCl
-pyodbc
-pyogrio
-pyOpenSSL
-pyparsing
-PyPDF2
-PyPika
-pyproj
-pyproject_hooks
-PyQt5
-PyQt5-sip
-PyQtWebEngine
-pyreadline3
-pyrsistent
-PySocks
-pytest
-python-dateutil
-python-dotenv
-python-iso639
-python-json-logger
-python-lsp-black
-python-lsp-jsonrpc
-python-lsp-server
-python-magic
-python-slugify
-python-snappy
-pytoolconfig
-pytz
-pyviz-comms
-PyWavelets
-# pywin32
-# pywin32-ctypes
-pywinpty
-PyYAML
-pyzmq
-QDarkStyle
-qstylizer
-QtAwesome
-qtconsole
-QtPy
-queuelib
-rapidfuzz
-regex
-requests
-requests-file
-requests-oauthlib
-requests-toolbelt
-rfc3339-validator
-rfc3986-validator
-rich
-rope
-rsa
-Rtree
-# ruamel-yaml-conda
-# ruamel.yaml
-s3fs
-s3transfer
-sacremoses
-scikit-image
-scikit-learn
-scikit-learn-intelex
-scipy
-Scrapy
-seaborn
-selenium
-Send2Trash
-service-identity
-shap
-shapely
-shellingham
-sip
-six
-sklearn-compat
-slicer
-smart-open
-smmap
-sniffio
-snowballstemmer
-sortedcontainers
-soupsieve
-Sphinx
-sphinxcontrib-applehelp
-sphinxcontrib-devhelp
-sphinxcontrib-htmlhelp
-sphinxcontrib-jsmath
-sphinxcontrib-qthelp
-sphinxcontrib-serializinghtml
-spyder
-spyder-kernels
-SQLAlchemy
-st-annotated-text
-st-theme
-stack-data
-starlette
-statsmodels
-streamlit
-streamlit-avatar
-streamlit-camera-input-live
-streamlit-card
-streamlit-embedcode
-streamlit-extras
-streamlit-faker
-streamlit-image-coordinates
-streamlit-keyup
-streamlit-pandas-profiling
-streamlit-toggle-switch
-streamlit-vertical-slider
-streamlit_folium
-sympy
-tables
-tabulate
-tangled-up-in-unicode
-TBB
-tblib
-tenacity
-terminado
-text-unidecode
-textdistance
-threadpoolctl
-three-merge
-tifffile
-tiktoken
-tinycss2
-tldextract
-tokenizers
-toml
-tomlkit
-toolz
-tornado
-tqdm
-traitlets
-transformers
-trio
-trio-websocket
-tweepy
-Twisted
-twisted-iocpsupport
-typeguard
-typer
-types-protobuf
-types-requests
-types-urllib3
-typing-inspect
-typing_extensions
-tzdata
-tzlocal
-uc-micro-py
-ujson
-Unidecode
-unstructured
-unstructured-client
-uritemplate
-urllib3
-uvicorn
-validators
-visions
-w3lib
-watchdog
-watchfiles
-wcwidth
-webdriver-manager
-webencodings
-websocket-client
-websockets
-Werkzeug
-whatthepatch
-widgetsnbextension
-win-inet-pton
-wordcloud
-wrapt
-wsproto
-xarray
-xgboost
-xlwings
-xyzservices
-y-py
-yapf
-yarl
-# ydata-profiling
-ypy-websocket
-zict
-zipp
-zope.interface
-zstandard
+numpy==1.24.4
+pandas==1.5.3
+scikit-learn==1.2.2
+matplotlib==3.7.1
+seaborn==0.12.2
+jupyterlab==3.6.4
+xgboost==1.7.6
+lightgbm==3.3.5
+catboost==1.2.2
