--- a/requirements.txt
+++ b/requirements.txt
@@ -2,108 +2,33 @@ numpy
 pandas
 scikit-learn
 seaborn
-altair
-Automat
-babel
 catboost
-chroma-hnswlib
-emoji
-faiss-cpu
-Faker
-fastapi
-fastjsonschema
-favicon
 geopandas
 gitdb
 GitPython
 imbalanced-learn
-import-ipynb
-importlib-metadata
-importlib_resources
-ipykernel
-ipython
 json5
-jsonpatch
-jsonpath-python
-jsonpointer
-jsonschema
-jupyter
-jupyter-console
-jupyter-events
-jupyter-server
-jupyter-ydoc
-jupyter_client
-jupyter_core
-jupyter_server_fileid
-jupyter_server_ydoc
-jupyterlab
-jupyterlab-pygments
-jupyterlab-widgets
-jupyterlab_server
-langchain
-langchain-community
-langchain-core
-langchain-google-genai
-langchain-google-vertexai
-langchain-openai
-langchain-text-splitters
-lazy-object-proxy
-lazy_loader
-lazypredict
 lightgbm
 Markdown
 markdown-it-py
 markdownlit
-MarkupSafe
-marshmallow
 matplotlib
 matplotlib-inline
 notebook
 notebook_shim
-numba
-onnxruntime
 openai
 openpyxl
-packaging
-pandocfilters
-panel
-phik
-pickleshare
-Pillow
-pkginfo
-platformdirs
+optuna
+base64
+pickle
+dotenv
+os
+folium
 plotly
-pytest
-python-dateutil
-python-dotenv
-python-iso639
-python-json-logger
-python-lsp-black
-python-lsp-jsonrpc
-python-lsp-server
-python-magic
-python-slugify
-python-snappy
-pytoolconfig
-scikit-image
-scikit-learn-intelex
 scipy
-Scrapy
-selenium
-sklearn-compat
-statsmodels
-streamlit
-streamlit-avatar
-streamlit-camera-input-live
-streamlit-card
-streamlit-embedcode
-streamlit-extras
-streamlit-faker
-streamlit-image-coordinates
-streamlit-keyup
-streamlit-pandas-profiling
-streamlit-toggle-switch
-streamlit-vertical-slider
-streamlit_folium
-toml
 xgboost
+streamlit_folium
+streamlit
+PIL
+shap
+imblearn
