--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ geopandas
 gitdb
 GitPython
 imbalanced-learn
-json5
+json
 lightgbm
 Markdown
 markdown-it-py
@@ -18,8 +18,6 @@ notebook
 notebook_shim
 openai
 openpyxl
-optuna
-base64
 pickle
 dotenv
 os
